[package]
name = "czmq"
version = "0.0.1"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the CZMQ library"
repository = "https://github.com/petehayes102/rust-czmq"

[dependencies]
bitflags = "0.5.*"
czmq-sys = { path = "czmq-sys" }
zmq = { git = "https://github.com/petehayes102/rust-zmq.git", branch = "tmp-master" }
