[package]
name = "czmq"
version = "0.0.3"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the CZMQ library"
repository = "https://github.com/petehayes102/rust-czmq"
homepage = "https://petehayes102.github.io/rust-czmq"

[dependencies]
bitflags = "0.5.*"
czmq-sys = { version = "0.0.2", path = "czmq-sys" }
zmq = { git = "https://github.com/petehayes102/rust-zmq.git", branch = "tmp-master" }

[dev-dependencies]
tempdir = "0.3"
tempfile = "2.1.*"
