[package]
name = "czmq"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the CZMQ library"
repository = "https://github.com/petehayes102/rust-czmq"
homepage = "https://petehayes102.github.io/rust-czmq"

[features]
# CZMQ uses the concept of "draft" implementations of immature RFCs.
# If you're linking against a version of CZMQ with drafts enabled,
# this feature will compile in bindings for them.
draft = []

[dependencies]
bitflags = "0.5.*"
czmq-sys = { version = "0.1.0", path = "czmq-sys" }
zmq = "0.8"

[dev-dependencies]
tempdir = "0.3"
tempfile = "2.1.*"
