[package]
name = "czmq-sys"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the CZMQ library"
repository = "https://github.com/petehayes102/rust-czmq"
homepage = "https://petehayes102.github.io/rust-czmq"
exclude = [
  "bindgen.h"
]
build = "build.rs"

[features]
default = []
buildtime_bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.25", optional = true }
pkg-config = "0.3.*"

[dependencies]
libc = "0.2.*"
